@@ -37,6 +37,7 @@ Mejorado ZX Vision:
 - Mostrar, con un punto, cuando un icono es de una ventana abierta pero minimizada
 - Mantener las proporciones de tamaño de la ventana de ZEsarUX (no permitir zoom x/y diferente) por defecto
 - Borrar el cursor al enviar una ventana a segundo plano
+- Agregado soporte de archivos rzx para el selector de archivos: se pueden expandir (a archivo de snapshot z80), mostrar vista previa, convertir a SCR, convertir a Z80, usar como fondo del ZX Desktop
 
 Mejorado Debug CPU:
 - Mostrar número de vista dentro de la ventana en vez de en el título de la ventana
